# exemplar

./: .clang-format  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Changelog.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: implementation-deficiency.md  infrastructure-issues.md  paper-discussion.md
.github/workflows/: ci_tests.yml  coverage.yml  pre-commit.yml
cmake/: appleclang-toolchain.cmake  beman.exemplar-config.cmake.in  feature_test.cmake  gnu-toolchain.cmake  llvm-toolchain.cmake  msvc-toolchain.cmake  use-fetch-content.cmake
docs/: README.md  using_exemplar.md
examples/: CMakeLists.txt
include/beman/exemplar/: identity.hpp
src/beman/exemplar/: CMakeLists.txt  identity.t.cpp
tests/beman/exemplar/: CMakeLists.txt
